# imgfilt

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
OLDinclude/: ConvolutionBasedFilter.hpp
OLDinclude/core/: Picture.hpp
OLDsrc/: plan.cpp
OLDsrc/core/: Picture.cpp  Pixel.cpp
OLDsrc/filters/: filters.cpp
doc/: LASTTHINK.cpp  LASTTHINK.txt  documentation.docx  error_handleing.txt  help_output_of_the_final_program.txt  how_does_bmp_work.txt  initial_specification.docx  input_txt_example.txt  learned_new_things.txt  nem_ertem.txt  notes.txt  questions.txt  specification.docx  specs_plan.txt  todo.txt
doc/html/: annotated.html  classes.html  dir_000000_000008.html  dir_000001_000004.html  dir_000002_000000.html  dir_000002_000008.html  dir_000003_000004.html  dir_000005_000000.html  dir_000005_000008.html  dir_000006_000004.html  dir_000007_000004.html  dir_000009_000004.html  dir_0ad255a918b7fba820a1ddafed6fa637.html  dir_0ad255a918b7fba820a1ddafed6fa637_dep.map  dir_0c0c9fa8a58db41e576adc3ce68c5ee9.html  dir_0c0c9fa8a58db41e576adc3ce68c5ee9_dep.map  dir_1bc13244e26df1e1f069a1fd18e36da3.html  dir_1bc13244e26df1e1f069a1fd18e36da3_dep.map  files.html  (+55 more)
include/: BMPFileManager.hpp  BMPImageHandler.hpp  BatchProcessor.hpp  Exceptions.hpp  FilterPipeline.hpp  IFileManager.hpp  IFilter.hpp  IImageHandler.hpp  KernelLibrary.hpp  Pixel.hpp
src/: BMPFileManager.cpp  BMPImageHandler.cpp  BatchProcessor.cpp  ContrastBrightnessFilter.cpp  ConvolutionFilter.cpp  FilterFactory.cpp  Kernel.cpp  Pixel.cpp  kernelGenerators.cpp  main.cpp  plan.cpp
test/: imgfilt  input.txt
(+580 files in other folders)
